@@ -10,6 +10,9 @@ What's New in Python 3.2.1?
 Core and Builtins
 -----------------
 
+- Issue #10979: unittest stdout buffering now works with class and module
+  setup and teardown.
+
 - Issue #11510: Fixed optimizer bug which turned "a,b={1,1}" into "a,b=(1,1)".
 
 - Issue #11432: A bug was introduced in subprocess.Popen on posix systems with
